--- a/Android/app/src/main/res/layout/toolbar.xml
+++ b/Android/app/src/main/res/layout/toolbar.xml
@@ -11,7 +11,7 @@
         <TextView
             android:layout_gravity="center"
             android:textColor="@android:color/white"
-            android:text="Ranking"
+            android:text="Ranking Test"
             android:textSize="20sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
