--- a/Android/app/src/main/res/layout/recyclerview_item.xml
+++ b/Android/app/src/main/res/layout/recyclerview_item.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_margin="10dp">
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profile_image"
@@ -10,7 +11,7 @@
         android:layout_height="96dp"
         android:src="@drawable/testimage"
         app:civ_border_color="#FF000000"
-        app:civ_border_width="2dp" />
+        app:civ_border_width="2dp"/>
 
     <TextView
         android:id="@+id/user_name"
