--- a/Android/app/src/main/res/layout/activity_rank.xml
+++ b/Android/app/src/main/res/layout/activity_rank.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -7,14 +7,14 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/toolbar_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <include layout="@layout/toolbar" />
 
         <ScrollView
             android:id="@+id/ranking_scrollbar"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="200dp"
             android:background="@drawable/stroke_bg"
             android:padding="5dp">
 
@@ -28,7 +28,14 @@
 
         </ScrollView>
 
-
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <Button
+        android:layout_gravity="bottom"
+        android:text="Start"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="100dp"
+        android:layout_width="100dp"
+        android:layout_height="50dp"/>
 
-</LinearLayout>
+</RelativeLayout>
