--- a/Android/app/src/main/res/layout/activity_rank.xml
+++ b/Android/app/src/main/res/layout/activity_rank.xml
@@ -30,6 +30,7 @@
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
     <Button
+        android:id="@+id/start_button"
         android:layout_gravity="bottom"
         android:text="Start"
         android:layout_alignParentBottom="true"
