--- a/Android/app/src/main/res/layout/activity_rank.xml
+++ b/Android/app/src/main/res/layout/activity_rank.xml
@@ -37,6 +37,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="100dp"
         android:layout_width="100dp"
-        android:layout_height="50dp"/>
+        android:layout_height="50dp"
+        />
 
 </RelativeLayout>
