--- a/android/app/src/main/res/layout/activity_rank.xml
+++ b/android/app/src/main/res/layout/activity_rank.xml
@@ -31,6 +31,7 @@
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
     <Button
         android:id="@+id/start_button"
+        android:onClick="onStartButtonClcik"
         android:layout_gravity="bottom"
         android:text="Start"
         android:layout_alignParentBottom="true"
