--- a/android/app/src/main/res/layout/activity_rank.xml
+++ b/android/app/src/main/res/layout/activity_rank.xml
@@ -13,8 +13,9 @@
 
         <ScrollView
             android:id="@+id/ranking_scrollbar"
+            android:layout_marginTop="60dp"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="500dp"
             android:background="@drawable/stroke_bg"
             android:padding="5dp">
 
@@ -36,7 +37,7 @@
         android:text="Start"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="50dp"
         android:layout_width="100dp"
         android:layout_height="50dp"
         />
