--- a/Model/androi/app/src/main/res/layout/popup_layout.xml
+++ b/Model/androi/app/src/main/res/layout/popup_layout.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:text="Add Friend"
+            android:text="@string/add_friend"
             android:textSize="20sp"
             android:textColor="#fff"
             android:gravity="center"
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/txtText"
-            android:text="Friend ID : "
+            android:text="@string/friend_id"
             android:textSize="15sp"
             android:textColor="#000"
             android:alpha="0.87"
@@ -40,7 +40,8 @@
         <EditText
             android:id="@+id/friendID"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:importantForAutofill="no" />
     </LinearLayout>
     <!-- Notice -->
 
@@ -55,16 +56,17 @@
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <Button
-            android:text="확인"
-            android:textSize="15sp"
-            android:textColor="#ff7a00"
-            android:padding="16dp"
-            android:gravity="center"
-            android:background="#00000000"
             android:layout_width="match_parent"
             android:layout_height="53dp"
-            android:onClick="mOnClose"/>
+            android:background="#00000000"
+            android:gravity="center"
+            android:onClick="mOnClose"
+            android:padding="16dp"
+            android:text="@android:string/ok"
+            android:textColor="#ff7a00"
+            android:textSize="15sp" />
     </LinearLayout>
     <!--// 닫기 버튼 -->
 </LinearLayout>
