--- a/app/src/main/res/layout/tfe_pn_activity_test.xml
+++ b/app/src/main/res/layout/tfe_pn_activity_test.xml
@@ -22,6 +22,6 @@
       android:id="@+id/image"
       android:scaleType="center"
       android:layout_width="fill_parent"
-      android:layout_height="fill_parent"/>
+      android:layout_height="300dp"/>
 
 </RelativeLayout>
