--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -3,32 +3,33 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    android:id="@+id/item_layout">
 
     <TextView
         android:id="@+id/ranking_number"
         android:text= "ranking_number"
         android:layout_centerVertical="true"
-        android:layout_width="wrap_content"
+        android:textAlignment="center"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"/>
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profile_image"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:src="@drawable/testimage"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_centerVertical="true"
         app:civ_border_color="#FF000000"
-        app:civ_border_width="2dp"
+        app:civ_border_width="0dp"
         android:layout_toRightOf="@id/ranking_number"
-        android:layout_marginLeft="10dp"/>
+        android:layout_marginLeft="5dp"/>
 
     <TextView
         android:id="@+id/user_name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="30dp"
-        android:layout_toRightOf="@id/profile_image"
+        android:gravity="center"
         android:text="홍길동"
         android:textSize="15dp" />
 
