--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -11,7 +11,7 @@
         <TextView
             android:layout_gravity="center"
             android:textColor="@android:color/white"
-            android:text="Ranking Test"
+            android:text="MotiHomeT"
             android:textSize="20sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -21,7 +21,8 @@
             android:id="@+id/toolbar_plus_friend"
             android:layout_marginRight="15dp"
             android:layout_gravity="right"
-            android:background="@android:drawable/ic_input_add"
+            android:background="@drawable/baseline_announcement_white_18dp"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="mOnPopupClick"/>
