--- a/app/src/main/res/layout/popup_layout.xml
+++ b/app/src/main/res/layout/popup_layout.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="#eeeeee"
     android:orientation="vertical"
@@ -9,14 +13,15 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView
-            android:text="Detail Information"
-            android:textSize="20sp"
-            android:textColor="#fff"
-            android:gravity="center"
-            android:background="#ff7a00"
             android:layout_width="match_parent"
-            android:layout_height="53dp" />
+            android:layout_height="53dp"
+            android:background="#ff7a00"
+            android:gravity="center"
+            android:text="How to use this app"
+            android:textColor="#fff"
+            android:textSize="20sp" />
     </LinearLayout>
     <!-- //end 타이틀바 -->
 
@@ -26,17 +31,24 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <!-- You can use this textfield! Dennis! -->
         <TextView
             android:id="@+id/txtText"
-            android:text="Some information ~~~~"
-            android:textSize="15sp"
-            android:textColor="#000"
-            android:alpha="0.87"
-            android:gravity="center"
-            android:layout_marginBottom="3dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="3dp"
+            android:alpha="0.87"
+            android:gravity="left"
+            android:text="MotiHomeT is designed to automatically count push-ups. It utilizes pose estimation to calculate different metrics about the body of a user, which in turn is used to count push-ups.
+If the app does not count the push-ups in the way you want to, try one of the following:
+\n\n 1. Move further away from the camera. The app wil crop the outer parts of the video, so make sure your body is properly centered
+\n\n 2. The app works best if you are facing the camera in a 45 degree angle.
+\n\n 3. If the color of the background and your clothing is to similar, the app can not detect your pose properly. Try to change your clothing.
+\n\n 4. The app is designed in a way that the phone has to be horizontally. Try to put your phone flat on the ground and lean it against a wall
+
+\n\n We hope that this helps you to use the app to its fullest extent.
+\n\n               STAY MOTIVATED!"
+            android:textColor="#000"
+            android:textSize="15sp" />
     </LinearLayout>
     <!-- Notice -->
 
@@ -65,3 +77,4 @@
     </LinearLayout>
     <!--// 닫기 버튼 -->
 </LinearLayout>
+</ScrollView>
