Add exit button to CameraActivity

--- a/app/src/main/res/layout/tfe_pn_activity_camera.xml
+++ b/app/src/main/res/layout/tfe_pn_activity_camera.xml
@@ -13,28 +13,41 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black"
-    tools:context="org.tensorflow.lite.examples.posenet.CameraActivity" >
+    android:layout_width="match_parent">
 
-    <RelativeLayout
-
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@android:color/black"
+        tools:context="org.tensorflow.lite.examples.posenet.a" >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <Button
+                android:id="@+id/btnStart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="158dp"
+                android:text="Start" />
+        </RelativeLayout>
+    </FrameLayout>
 
-        >
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
         <Button
-            android:id="@+id/btnStart"
+            android:onClick="onClickExit"
+            android:layout_marginBottom="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="158dp"
-            android:text="Start"/>
+            android:text="EXIT" />
     </RelativeLayout>
 </FrameLayout>
